--- a/tugas_p3/assets/css/stylebuku.css
+++ b/tugas_p3/assets/css/stylebuku.css
@@ -5,7 +5,7 @@ body{
     font-size:15px;
    }
    #wrapper{
-    background: #eee;
+    background: #fff;
     width: 1100px;
     margin: 20px auto;
    }
